tests/fixtures/valid/ngl005_valid.py
from nicegui import ui

with ui.column().classes('h-screen'):
    ui.scroll_area().classes('h-full')
