tests/fixtures/invalid/ngl005_invalid.py
from nicegui import ui

ui.scroll_area().classes('h-full')
